Server is done, rework for migrations, starting from docker
